--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "start"
+    "start": "node index"
   },
   "repository": {
     "type": "git",
